# systemair_app

./: LICENSE  MANIFEST.in  README.md  package.json  pyproject.toml  setup.py
systemair_app/: __init__.py  hooks.py  modules.txt
systemair_app/doctype/systemair_fan_item/: systemair_fan_item.json
systemair_app/doctype/systemair_quotation/: systemair_quotation.json
systemair_app/doctype/systemair_settings/: systemair_settings.json
systemair_app/public/: build.json
systemair_app/public/css/: systemair_app.css
systemair_app/public/js/: systemair_app.js
systemair_app/systemair_app/doctype/systemair_quotation/: systemair_quotation.js  systemair_quotation.py
systemair_app/systemair_app/doctype/systemair_settings/: systemair_settings.py
